# cogcc-oil-pipeline

./: .gitignore  Makefile  README.md  TaskIndex.md  config.yaml  conftest.py  eval_results.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  task-writer-cogcc.md  test-requirements.xml
cogcc_pipeline/: __init__.py  __main__.py  acquire.py  features.py  ingest.py  orchestrator.py  pipeline.py  transform.py  utils.py
config/: config.yaml  pipeline_config.yaml
references/: production-data-dictionary.csv
tasks/: acquire_tasks.md  features_tasks.md  ingest_tasks.md  orchestrator_tasks.md  pipeline_tasks.md  transform_tasks.md
tests/: __init__.py  conftest.py  test_acquire.py  test_features.py  test_ingest.py  test_integration.py  test_orchestrator.py  test_pipeline.py  test_transform.py
