[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cogcc-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dask[distributed]",
    "pandas",
    "numpy",
    "pyarrow",
    "requests",
    "pyyaml",
    "bokeh",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-requests",
]

[project.scripts]
cogcc-pipeline = "cogcc_pipeline.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cogcc_pipeline*"]
